hphp/hack/test/typecheck/function_pointer/obj_get_visibility_bad.php.exp
File "obj_get_visibility_bad.php", line 8, characters 8-14:
Invalid argument (Typing[4110])
File "obj_get_visibility_bad.php", line 4, characters 24-26:
Expected int
File "obj_get_visibility_bad.php", line 8, characters 8-14:
But got string
