hphp/hack/test/typecheck/function_pointer/obj_get_visibility_bad.php
<?hh

final class Foo {
  private function bar(int $x): void {}

  public function foo(): void{
    $x = $this->bar<>;
    $x('hello');
  }
}
